fix(invest): no more grid icon jump

--- a/apps/invest/src/components/header/Header.scss
+++ b/apps/invest/src/components/header/Header.scss
@@ -49,3 +49,7 @@ header {
     height: 88px;
   }
 }
+
+.auth-fixed-width {
+  width: 107px !important;
+}
