--- a/apps/invest/src/components/navigation/Navigation.scss
+++ b/apps/invest/src/components/navigation/Navigation.scss
@@ -17,7 +17,7 @@
   }
 
   @include breakpoint(medium) {
-    margin-right: 30px;
+    margin-right: 20px;
   }
 }
 
@@ -55,33 +55,7 @@
   background-color: #d8d8dc;
 }
 
-/* [data-is-closed='false'] .menu-btn:before {
-  content: '';
-  background-color: var(--primary-200);
-  border-radius: 50%;
-  position: absolute;
-  left: 0;
-  top: 0;
-  width: 100%;
-  height: 100%;
-  transform: scale(1.1);
-  display: block;
-}
 
-[data-is-closed='true'] .circle-hover:hover:before {
-  content: '';
-  background-color: var(--primary-100);
-  border-radius: 50%;
-  position: absolute;
-  left: 0;
-  top: 0;
-  width: 100%;
-  height: 100%;
-  transform: scale(1.1);
-  display: block;
-  cursor: pointer;
-}
- */
 .divider {
   height: $space-2;
   background-color: var(--divider);
